CHANGES
=======

Version 0.2.1 (2011-??-??)
--------------------------

  - Supports Google App Engine SDK 1.4.3.

  - Uses experimental Files API (from development server).

  - Builtin handlers are configurable via app.yaml now.

  - Fixes an issue where importing the MySQL Datastore API Proxy Stub failed.

    - http://code.google.com/p/typhoonae/issues/detail?id=81


Version 0.2.0 (2010-12-12)
--------------------------

  - Supports Google App Engine SDK 1.4.0.

  - Implements Channel API backed by the NGINX push module.

    - http://code.google.com/p/typhoonae/issues/detail?id=57

  - Adds experimental support for the appcfg.py update command.

    - http://code.google.com/p/typhoonae/issues/detail?id=49

  - Incoming Mail Service through a configurable IMAP listener and HTTP
    dispatcher.

    - http://code.google.com/p/typhoonae/issues/detail?id=73

  - Adds process monitor for automatically restarting appserver processes
    consuming more than a given amount of memory that is held in RAM (RSS).

  - Using Celery as alternative Task Queue backend.

  - Appserver imports and initializes API proxy stubs for various service
    backends only when needed.

  - Updated Web Socket Service to provide the latest Web Socket protocol.

    - http://code.google.com/p/typhoonae/issues/detail?id=52

  - Removed obsolete service for sequential integer ids and so eliminated a
    typical 'Single Point Of Failure'.

  - Fixes an issue where spaces in application paths caused failures on
    startup.

    - http://code.google.com/p/typhoonae/issues/detail?id=62

  - Fixes issues where develop mode didn't work.

    - http://code.google.com/p/typhoonae/issues/detail?id=63
    - http://code.google.com/p/typhoonae/issues/detail?id=64

  - Fixes an issue where the Capability API did not work with remote Datastore
    configuration.

    - http://code.google.com/p/typhoonae/issues/detail?id=65

  - Fixes a critical issue where an application hangs if the connection to the